--- a/sixth_sense/nbproject/project.properties
+++ b/sixth_sense/nbproject/project.properties
@@ -5,9 +5,9 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;src=gen;output=bin/classes;
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=C:\\Edu\\android projects\\Monthly_planner
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1409949412000
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=../..
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1394988580000
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,12 +28,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Monthly_planner.jar
+dist.jar=${dist.dir}/sixth_sense.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.Monthly_planner-gen=../../Monthly_planner/gen
-file.reference.Monthly_planner-src=../../Monthly_planner/src
-gen.dir=${file.reference.Monthly_planner-gen}
+file.reference.sixth_sense-gen=gen
+file.reference.sixth_sense-src=src
+gen.dir=${file.reference.sixth_sense-gen}
 includes=**
 jar.compress=false
 javac.classpath=
@@ -74,4 +74,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.Monthly_planner-src}
+src.dir=${file.reference.sixth_sense-src}
